# mapkick-static.py

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
mapkick/static/: __init__.py
tests/: test_map.py
