[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mapkick-static"
version = "0.1.0"
description = "Create beautiful static maps with one line of Python"
readme = "README.md"
authors = [
    {name = "Andrew Kane", email = "andrew@ankane.org"}
]
license = {text = "MIT"}
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://github.com/ankane/mapkick-static.py"
